// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ElementCard Displays a draggable card with accessibility pattern 1`] = `
<div
  class="element-card element-card-lake_placid_blue element-draggable-item element-card-background-peggy_pink_text element-card-with-accessibility"
  data-draggable="true"
>
  <div
    class="element-card-content"
  >
    <div
      class="element-card-xref-label"
    >
      <a
        class="element-card-xref element-card-xref-lake_placid_blue"
        data-not-drag-handle="true"
        href="/plugins/tracker/?aid=100"
      >
        
                
            
      </a>
       
      <span
        class="element-card-label"
      >
        My artifact
      </span>
    </div>
  </div>
   
  <div
    class="element-card-accessibility"
  />
</div>
`;

exports[`ElementCard Displays a not draggable card without accessibility pattern 1`] = `
<div
  class="element-card element-card-lake_placid_blue"
  data-draggable="true"
>
  <div
    class="element-card-content"
  >
    <div
      class="element-card-xref-label"
    >
      <a
        class="element-card-xref element-card-xref-lake_placid_blue"
        data-not-drag-handle="true"
        href="/plugins/tracker/?aid=100"
      >
        
                
            
      </a>
       
      <span
        class="element-card-label"
      >
        My artifact
      </span>
    </div>
  </div>
   
  <!---->
</div>
`;
